src/styles/CustomCard.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");


.nunito-sans-simple {
  font-family: "Nunito Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings:
    "wdth" 100,
    "YTLC" 500;
}

.custom-card-page {
    width: 100%;
    overflow-x: hidden;
    font-family: Nunito Sans;
    text-align: center;
}

.custom-card-page button {
    font-size: 15px;
    display: block;
    margin: 10px 0px 0px 15px;
}

.draw-canvas {
    border-radius: 10px;
    border: 2px solid rgb(114, 195, 197);
    cursor: crosshair;
    display: block;
    margin: 10px auto;
}

.color-swatch {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    cursor: pointer;
    margin: 3px;
}

.eraser {
    background-color: white;
    border: 1px gray;
    display: flex;
    align-items: center;
    justify-content: center;
}

.drawing-area {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 0px;  /* reduced from 10px */
}

.toolbar {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.toolbar button {
    background: none;
    border: none;
    box-shadow: none;
    padding-left: 30px;
    margin: 0;
}

.palette {
    display: flex;
    flex-direction: column;
    padding-left: 30px;
    gap: 6px;
}

.brush-controls {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 4px;
}   

